Update home.html previous commit is 3rd model addition
add model documentation link in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -162,6 +162,7 @@
     <ul>
         <li><a href="https://github.com/Lee-yah/URL-Classifier-API" target="_blank">📂 GitHub Repository</a></li>
         <li><a href="https://github.com/Lee-yah/URL-Classifier-API/blob/master/README.md" target="_blank">📄 README.md</a></li>
+        <li><a href="https://github.com/Lee-yah/URL-Classifier-API/blob/master/MODEL.md" target="_blank">📈 MODEL.md - Performance & Training Details</a></li>
         <li><a href="https://github.com/Lee-yah/URL-Classifier-API/blob/master/FEATURES.md" target="_blank">🔍 FEATURES.md</a></li>
     </ul>
     
